editor-components/feature/feature7/feature7.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;
.container {
  padding: 80px 0 !important;
  .max-content {
    max-width: 100% !important;
    .wrapper {
      display: flex;
      justify-content: center;
      align-items: center;
      gap: var(--composer-gap-lg);
      .image-container {
        width: 100%;
        .image, .image-no-border-radius {
          width: 100%;
          height: auto;
          border-top-right-radius: var(--composer-border-radius-sm);
          border-bottom-right-radius: var(--composer-border-radius-sm);
          object-fit: cover;
          max-height: 100vh;
        }
        .image-no-border-radius{
          border-top-right-radius: 0px;
          border-bottom-right-radius: 0px;
        }
      }
      .text-container {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: var(--composer-gap-md);
        padding: 0 var(--composer-gap-xl) 0px 0px;
        
        .title-wrapper{
          align-items: baseline;
          .subtitle,  .title, .description {
            text-align: left;
          }
          .subtitle{
            margin-left: 0;
          }
          .featuresList {
            display: flex;
            flex-direction: column;
            align-items: baseline;
            gap: var(--composer-gap-sm);
            .feature {
              display: flex;
              justify-content: start;
              align-items: baseline;
              height: 100%;
              gap: var(--composer-gap-sm);
              
              &.feature-center {
                justify-content: flex-start;
              }
              .icon-wrapper {
                display: flex;
                .iconFeature {
                  width: 20px;
                  height: 20px;
                  font-size: 1rem;
                  color: var(--composer-font-color-primary);
                }
              }
              .featureTitle {
                color: var(--composer-font-color-primary);
                width: fit-content;
                margin: 0;
                text-align: left;
              }
            }
          }
          .linkList {
            display: flex;
            flex-direction: column;
            gap: var(--composer-gap-sm);
            .linkContainer {
              display: flex;
              align-items: center;
              color: var(--composer-font-color-primary);
              cursor: pointer; 
              .link {
                display: flex;
                gap: var(--composer-gap-sm);
                .linkText {
                  content: "";
                }
                .iconWrapper{
                  display: flex;
                  align-items: center;
                  .iconLink {
                    width: 20px;
                    height: 20px;
                  }
                }
              }
              &:hover {
                color: var(--composer-primary-color);
              }
            }
          }
         
        }
 
      }
    }
  }
}


@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .wrapper {
        flex-direction: column;
        .text-container {
          padding: 0 var(--composer-gap-lg) !important;
          .title-wrapper {
            .subtitle,  .title, .description {
              text-align: left;
            }
            .featuresList {
              align-items: baseline;
              .feature {
                .featureTitle {
                  text-align: left;
                }
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    padding: var(--composer-gap-xl) 0 !important;
    .max-content {
      .wrapper {
        flex-direction: column;
        gap: var(--composer-gap-md);
        .text-container {
          padding: 0 var(--composer-gap-md) !important;
          .title-wrapper {
            .featuresList {
              .feature {
                .featureTitle {
                  text-align: left;
                }
              }
            }
          }
        }
      }
    }
  }
}

