fix: Feature 7 – Left spacing when image is removed

--- a/editor-components/feature/feature7/feature7.module.scss
+++ b/editor-components/feature/feature7/feature7.module.scss
@@ -1,16 +1,26 @@
 @use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;
+
 .container {
-  padding: 80px 0 !important;
+  padding: 120px 0 !important;
+
+  &.no-image {
+    padding: 120px 60px !important;
+  }
+
   .max-content {
     max-width: 100% !important;
+
     .wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
       gap: var(--composer-gap-lg);
+
       .image-container {
         width: 100%;
-        .image, .image-no-border-radius {
+
+        .image,
+        .image-no-border-radius {
           width: 100%;
           height: auto;
           border-top-right-radius: var(--composer-border-radius-sm);
@@ -18,43 +28,53 @@
           object-fit: cover;
           max-height: 100vh;
         }
-        .image-no-border-radius{
+
+        .image-no-border-radius {
           border-top-right-radius: 0px;
           border-bottom-right-radius: 0px;
         }
       }
+
       .text-container {
         width: 100%;
         display: flex;
         flex-direction: column;
         gap: var(--composer-gap-md);
-        padding: 0 var(--composer-gap-xl) 0px 0px;
-        
-        .title-wrapper{
+        padding: 0 60px 0px 0px;
+
+        .title-wrapper {
           align-items: baseline;
-          .subtitle,  .title, .description {
+
+          .subtitle,
+          .title,
+          .description {
             text-align: left;
           }
-          .subtitle{
+
+          .subtitle {
             margin-left: 0;
           }
+
           .featuresList {
             display: flex;
             flex-direction: column;
             align-items: baseline;
             gap: var(--composer-gap-sm);
+
             .feature {
               display: flex;
               justify-content: start;
               align-items: baseline;
               height: 100%;
               gap: var(--composer-gap-sm);
-              
+
               &.feature-center {
                 justify-content: flex-start;
               }
+
               .icon-wrapper {
                 display: flex;
+
                 .iconFeature {
                   width: 20px;
                   height: 20px;
@@ -62,6 +82,7 @@
                   color: var(--composer-font-color-primary);
                 }
               }
+
               .featureTitle {
                 color: var(--composer-font-color-primary);
                 width: fit-content;
@@ -70,57 +91,82 @@
               }
             }
           }
+
           .linkList {
             display: flex;
             flex-direction: column;
             gap: var(--composer-gap-sm);
+
             .linkContainer {
               display: flex;
               align-items: center;
               color: var(--composer-font-color-primary);
-              cursor: pointer; 
+              cursor: pointer;
+
               .link {
                 display: flex;
                 gap: var(--composer-gap-sm);
+
                 .linkText {
                   content: "";
                 }
-                .iconWrapper{
+
+                .iconWrapper {
                   display: flex;
                   align-items: center;
+
                   .iconLink {
                     width: 20px;
                     height: 20px;
                   }
                 }
               }
+
               &:hover {
                 color: var(--composer-primary-color);
               }
             }
           }
-         
         }
- 
       }
     }
   }
 }
 
-
 @container (max-width: #{$composer-tablet-width}) {
   .container {
+    padding: 100px 0 !important;
+
+    &.no-image {
+      padding: 100px 50px !important;
+
+      .max-content {
+        .wrapper {
+          .text-container {
+            padding: 0 !important;
+          }
+        }
+      }
+    }
+
     .max-content {
       .wrapper {
         flex-direction: column;
+
         .text-container {
-          padding: 0 var(--composer-gap-lg) !important;
+          padding: 0 var(--composer-gap-xl) !important;
+
           .title-wrapper {
-            .subtitle,  .title, .description {
+
+            .subtitle,
+            .title,
+            .description {
               text-align: left;
             }
+
             .featuresList {
               align-items: baseline;
+
               .feature {
                 .featureTitle {
                   text-align: left;
@@ -137,12 +183,19 @@
 @container (max-width: #{$composer-phone-width}) {
   .container {
     padding: var(--composer-gap-xl) 0 !important;
+
+    &.no-image {
+      padding: 50px 30px !important;
+    }
+
     .max-content {
       .wrapper {
         flex-direction: column;
         gap: var(--composer-gap-md);
+
         .text-container {
-          padding: 0 var(--composer-gap-md) !important;
+          padding: 0 30px !important;
+
           .title-wrapper {
             .featuresList {
               .feature {
